# sellerapi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
nginx/: nginx.conf
src/: main.py
src/api/: deps.py  exceptions.py
src/api/v1/: router.py
src/api/v1/admin/: mappers.py  router.py  schemas.py
src/api/v1/customer/: mappers.py  router.py  schemas.py
src/application/admin_manages_products/commands/: __init__.py  add_product_type.py  add_products_with_validation.py  add_products_without_validation.py  import_products.py
src/application/admin_manages_products/dtos/: __init__.py  add_products_result.py  find_products_result.py  product_type_schema.py  product_type_with_schema.py  products_types.py
src/application/admin_manages_products/interfaces/: __init__.py  products_reader.py  products_writer.py  (+2 more)
src/application/common/: exceptions.py  mediator.py  request.py
src/application/customer_buys_products/: exceptions.py
src/core/: config.py  exceptions.py  loader.py  responses.py
src/db/: factory.py
src/db/migrations/: env.py
src/db/models/: __init__.py  access_token.py  base.py  product.py  product_features.py  product_purchase.py  product_schema_version.py  product_type.py  product_type_allowed_features.py  product_type_features.py  purchase_token.py
src/infrastructure/: setup.py  validators_registry.py
src/infrastructure/adapters/: access_token_reader.py  purchase_token_reader.py
src/infrastructure/di/: setup.py
tests/concurrency/: conftest.py
tests/integration/: conftest.py
tests/unit/: conftest.py
(+92 files in other folders)
